--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="jumbotron text-white bg-transparent m-4" id="jumbotron" style="background-image: url('static/ai_background_transBLABLA.jpg'); background-size: auto 100%; background-repeat: no-repeat;">
         <div class="container fadeIn bg-transparent">
-            <h3 class="display-3">Machine Learning Early Detection Diabetes Prediction</h3>
+            <h3 class="display-3">Diabetes Prediction</h3>
             This site offers an example of using a machine learning model to provide a quick prediction of diabetes diagnosis.
         </div>
     </div>
