--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -30,10 +30,10 @@
     <div class="container">
         <div class="d-flex justify-content-between">
             <div>
-                <span class="text-white small">Dylan Cairns 2020</span>
+                <span class="text-white small">Misha Aggarwal</span>
             </div>
             <div class>
-                <a class="text-white text-decoration-none small" href="https://github.com/Dylan-Cairns/ml-diabetes-prediction">View the source on Github <i class="fa fa-github"></i></a>
+                <a class="text-white text-decoration-none small" href="https://github.com/mishaaggarwal15/diabities_prediction">View the source on Github <i class="fa fa-github"></i></a>
             </div>
         </div>
     </div>
