--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,6 +2,41 @@
 
 {% set active_page = "about" %}
 
+<!--   LINK         -->         
+<!doctype html> 
+<html lang="en" class="h-100">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{ url_for('static',     filename='style.css') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    {% if ((request.path == '/diagnose') or (request.path == '/diagnosis')) %}
+    <!-- Jquery, loaded only on diagnosis page -->
+    {% include 'diagnoseformscript.html' %}
+
+    <a href="diagnoseformscript.html">disgnose</a>
+
+    {% endif %}
+    <title>{{title}}</title>
+</head>
+
+
+<body class="d-flex flex-column h-100 body">
+    {% include 'navbar.html' %}
+    <main role="main" class="flex-shrink-0">
+        {% block content %}
+        {% endblock content %}
+    </main>
+<!--REMOVE-->
+
 {% block content %}
 <div class="container shadow rounded fadeIn p-5 my-5 bg-white" id="content">
     <h2> Training a Machine Learning Model to Predict Diabetes Diagnosis </h2>
@@ -65,7 +100,25 @@
     <br><p>Although the model performs well on all 3 metrics, recall can be considered the metric of most importance in this particular application. Recall measures false negatives against true positives, and is of particular weight when dealing with medical issues, when it&#39;s very important to avoid false negatives.</p>
     <br><br><h4>Deploying the trained model</h4><br>
     <p>Now that the model is trained, all that&#39;s left is to deploy it to the web application! </p>
-    <p>If you would like to view a jupyter notebook containing all of the code necessary for processing the data and training the model as discussed above, click <a href="https://github.com/Dylan-Cairns/ML-Diabetes-Prediction/blob/master/diabetes_jupyter_notebook.ipynb">here</a>.</a></p>
+    <p>If you would like to view a jupyter notebook containing all of the code necessary for processing the data and training the model as discussed above, click <a href="https://github.com/mishaaggarwal15/diabities_prediction/blob/master/diabetes_jupyter_notebook.ipynb">here</a>.</a></p>
 </div>
 
 {% endblock %}
+<!-- REMOVE -->
+<footer class="footer mt-auto py-3">
+    <div class="container">
+        <div class="d-flex justify-content-between">
+            <div>
+                <span class="text-white small">Misha Aggarwal</span>
+            </div>
+            <div class>
+                <a class="text-white text-decoration-none small" href="https://github.com/mishaaggarwal15/diabities_prediction">View the source on Github <i class="fa fa-github"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+</body>
+</html>
+
