--- a/app/static/style.css
+++ b/app/static/style.css
@@ -8,7 +8,7 @@ body {
 
 #homepagebackground {
     /*background: url(ai_background_trans.jpg);*/
-    background-color: #7285a3;
+    background-color: #a37272;
     background-size: auto 100%;
     background-repeat: no-repeat;
 }
