--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow" id="navbar">
     <div class="container">
-        <a class="navbar-brand" href="#"><span class="fa fa-medkit"></span> ML Diabetes Diagnosis</a>
+        <a class="navbar-brand" href="#"><span class="fa fa-medkit"></span> Diabetes Diagnosis </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -12,9 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link {{'active' if active_page == 'diagnose' }}" href="{{ url_for('diagnose') }}">Diagnosis</a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link {{'active' if active_page == 'data' }}" href="/dashapp/">Data + Visualizations</a>
-                </li>
+                </li>-->
                 <li class="nav-item">
                     <a class="nav-link {{'active' if active_page == 'about' }}" href="{{ url_for('about') }}">About</a>
                 </li>
