--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,10 +3,10 @@
 {% set active_page = "home" %}
 
 {% block content %}
-    <div class="jumbotron text-white bg-transparent m-4" id="jumbotron" style="background-image: url('static/ai_background_transBLABLA.jpg'); background-size: auto 100%; background-repeat: no-repeat;">
+    <div class="jumbotron text-white bg-transparent m-4" id="jumbotron" style="background-color: #a37272; background-size: auto 100%; background-repeat: no-repeat;">
         <div class="container fadeIn bg-transparent">
             <h3 class="display-3">Diabetes Prediction</h3>
-            This site offers an example of using a machine learning model to provide a quick prediction of diabetes diagnosis.
+            Diabetes diagnosis by filling a form. 
         </div>
     </div>
 </div>
