--- a/app/templates/homenavbar.html
+++ b/app/templates/homenavbar.html
@@ -12,9 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link {{'active' if active_page == 'diagnose' }}" href="{{ url_for('diagnose') }}">Diagnosis</a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link {{'active' if active_page == 'data' }}" href="/dashapp/">Data + Visualizations</a>
-                </li>
+                </li>-->
                 <li class="nav-item">
                     <a class="nav-link {{'active' if active_page == 'about' }}" href="{{ url_for('about') }}">About</a>
                 </li>
