--- a/app/static/style.css
+++ b/app/static/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #homepagebackground {
-    background: url(image-color.png);
+    background: url('image-color.png');
     background-color: #a37272;
     background-size: auto 100%;
     background-repeat: no-repeat;
