--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container shadow rounded fadeIn p-5 my-5 bg-white" id="content">
-    <h2>Diabetes Status Diagnosis </h2>
+    <h2>Diabetes Diagnosis</h2>
     <br>
     <div class="container">
         <form action="" id="diagnosis-form" method="post">
