--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
 {% set active_page = "home" %}
 
 {% block content %}
-    <div class="jumbotron text-white bg-transparent m-4" id="jumbotron" style="background-color:#a37272">
+    <div class="jumbotron text-white m-4" id="jumbotron" style="background-color:#a37272">
         <div class="container fadeIn bg-transparent">
             <h3 class="display-3">Diabetes Prediction</h3>
             Diabetes diagnosis by filling a form. 
