--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="card-body text-center">
                         <h4>Make a prediction</h4>
-                        <p> Make a prediction utilizing a trained machine learning model. </p>
+                        <p> Take the test and view results </p>
                         <p><a class="btn btn-secondary" href="{{ url_for('diagnose') }}" role="button">View details &raquo;</a></p>
                     </div>
                 </div></div>
@@ -32,7 +32,7 @@
                     </div>
                     <div class="card-body text-center">
                         <h4>Methodology</h4>
-                        <p>Summary of the process used to train the machine learning model.</p>
+                        <p>Approach followed to create this project.</p>
                         <p><a class="btn btn-secondary" href="{{ url_for('about') }}" role="button">View details &raquo;</a></p>
                     </div>
                 </div></div>
