--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,31 +4,31 @@
 
 {% block content %}
 <div class="container shadow rounded fadeIn p-5 my-5 bg-white" id="content">
-    <h2> Training a Machine Learning Model to Predict Diabetes Diagnosis </h2>
+    <h2> Machine Learning based Diabities Prediction Project</h2>
     <br><br>
-    <p>This project utilizes machine learning to provide a prediction of a patients diabetes diagnosis status based on the answers of a questionnaire regarding a number of related symptoms. The data used to train the model is obtained from the University of California Irving Machine Learning Repositories. The official site hosting the data can be found <a href='https://archive.ics.uci.edu/ml/datasets/Early+stage+diabetes+risk+prediction+dataset.' target='_blank' class='url'>here</a>.</p>
+    <p>This project utilizes machine learning to provide a prediction of a patients diabetes diagnosis status based on the answers of a questionnaire regarding a number of related symptoms. The data used to train the model is obtained from the University of California Irving Machine Learning Repositories. <i>The official data resource is available <a href='https://archive.ics.uci.edu/ml/datasets/Early+stage+diabetes+risk+prediction+dataset.' target='_blank' class='url'>here</a>.</i></p>
     <br><br>
     <h4>Cleaning and Transforming the Data</h4><br>
-    <p>The first step necessary is to clean and transform the data in a way that it can be easily read by our machine learning model. Here is what the first 5 lines of the data look like before any modifications:</p>
+    <p>Data cleaning and transformation allows the data to be easily read by our machine learning model. A part of data before modifications is shown below:</p>
     <br>
     <div class="scrollme"><figure><table class="table table-hover">
         <thead>
         <tr><th>Age</th><th>Gender</th><th>Polyuria</th><th>Polydipsia</th><th>sudden weight loss</th><th>weakness</th><th>Polyphagia</th><th>Genital thrush</th><th>visual blurring</th><th>Itching</th><th>Irritability</th><th>delayed healing</th><th>partial paresis</th><th>muscle stiffness</th><th>Alopecia</th><th>Obesity</th><th>class</th></tr></thead>
         <tbody><tr><td>40</td><td>Male</td><td>No</td><td>Yes</td><td>No</td><td>Yes</td><td>No</td><td>No</td><td>No</td><td>Yes</td><td>No</td><td>Yes</td><td>No</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Positive</td></tr><tr><td>58</td><td>Male</td><td>No</td><td>No</td><td>No</td><td>Yes</td><td>No</td><td>No</td><td>Yes</td><td>No</td><td>No</td><td>No</td><td>Yes</td><td>No</td><td>Yes</td><td>No</td><td>Positive</td></tr><tr><td>41</td><td>Male</td><td>Yes</td><td>No</td><td>No</td><td>Yes</td><td>Yes</td><td>No</td><td>No</td><td>Yes</td><td>No</td><td>Yes</td><td>No</td><td>Yes</td><td>Yes</td><td>No</td><td>Positive</td></tr><tr><td>45</td><td>Male</td><td>No</td><td>No</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Yes</td><td>No</td><td>Yes</td><td>No</td><td>Yes</td><td>No</td><td>No</td><td>No</td><td>No</td><td>Positive</td></tr><tr><td>60</td><td>Male</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Yes</td><td>No</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Yes</td><td>Positive</td></tr></tbody>
     </table></figure></div><br><br>
-    <p>&#39;Male/Female&#39; fields as well as &#39;Yes/No&#39; fields will be replaced with binary True and False in order to be understood by our machine learning model. After these transformations the data now looks like this:</p>
+    <p>&#39;Male/Female&#39; fields as well as &#39;Yes/No&#39; fields will be replaced with binary True and False. A part of data after transformations is shown below:</p>
     <br>
     <div class="scrollme"><figure><table class="table table-hover">
         <thead>
         <tr><th>Age</th><th>Gender</th><th>Polyuria</th><th>Polydipsia</th><th>sudden weight loss</th><th>weakness</th><th>Polyphagia</th><th>Genital thrush</th><th>visual blurring</th><th>Itching</th><th>Irritability</th><th>delayed healing</th><th>partial paresis</th><th>muscle stiffness</th><th>Alopecia</th><th>Obesity</th><th>class</th></tr></thead>
         <tbody><tr><td>40</td><td>True</td><td>False</td><td>True</td><td>False</td><td>True</td><td>False</td><td>False</td><td>False</td><td>True</td><td>False</td><td>True</td><td>False</td><td>True</td><td>True</td><td>True</td><td>True</td></tr><tr><td>58</td><td>True</td><td>False</td><td>False</td><td>False</td><td>True</td><td>False</td><td>False</td><td>True</td><td>False</td><td>False</td><td>False</td><td>True</td><td>False</td><td>True</td><td>False</td><td>True</td></tr><tr><td>41</td><td>True</td><td>True</td><td>False</td><td>False</td><td>True</td><td>True</td><td>False</td><td>False</td><td>True</td><td>False</td><td>True</td><td>False</td><td>True</td><td>True</td><td>False</td><td>True</td></tr><tr><td>45</td><td>True</td><td>False</td><td>False</td><td>True</td><td>True</td><td>True</td><td>True</td><td>False</td><td>True</td><td>False</td><td>True</td><td>False</td><td>False</td><td>False</td><td>False</td><td>True</td></tr><tr><td>60</td><td>True</td><td>True</td><td>True</td><td>True</td><td>True</td><td>True</td><td>False</td><td>True</td><td>True</td><td>True</td><td>True</td><td>True</td><td>True</td><td>True</td><td>True</td><td>True</td></tr></tbody>
     </table></figure></div><br><br>
-    <p>Now we can generate a confusion matrix (or heatmap) to visualize the relationship between different symptoms. We can see from the confusion matrix that the conditions polyuria and polydipsia are the most strongly correlated to a positive diabetes diagnosis. We can expect that they will be an important factor in any machine learning models prediction.</p>
+    <p>Generation of a confusion matrix/heatmap helps visualize the relationship between different symptoms. We can see from the confusion matrix that the conditions polyuria and polydipsia are the most strongly correlated to a positive diabetes diagnosis. We can expect that they will be an important factor in any machine learning models prediction.</p>
     <br>
     <div class="text-center"><img class="img-fluid" src="{{ url_for('static',     filename='confusion_matrix.png') }}"/></div>
     <p>&nbsp;</p><br>
     <h4>Pruning Data Features</h4><br>
-    <p>The next step will be to use a machine learning model called a <em>decision tree classifier</em> to help select the most important features  (which in this case represent symptoms) from the dataset. After training the decision tree classifier on the model, the following graph of feature importance is created.</p>
+    <p>The next step will be to use a machine learning model called a <em>Decision tree classifier</em> to help select the most important features from the dataset. After training the decision tree classifier on the model, the following graph of feature importance is created.</p>
     <br><br>
     <div class="text-center"><img class="img-fluid" src="{{ url_for('static',     filename='feature_bar_graph.png') }}"/></div>
     <br>
@@ -53,19 +53,17 @@
  &#39;min_samples_leaf&#39;: [1, 2, 4],
  &#39;bootstrap&#39;: [True, False]}
 </code></pre><br><br>
-    <p>After using randomized search to attempt to find the best hyper-parameters from the given options, we compare the adjusted model to the random forest classifier without hyper-parameters tuned, as well as to the logistic regression model for good measure. As can be seen from the graph below, the adjustment of hyper-parameters actually resulted in worse performance. Thus our final selection for our machine learning model is the original random forest classifier.</p>
+    <p>After using randomized search to attempt to find the best hyper-parameters, we compare the adjusted model to the random forest classifier without hyper-parameters tuned, as well as to the logistic regression model for good measure. As can be seen from the graph below, the adjustment of hyper-parameters actually resulted in worse performance. Thus our final selection for our machine learning model is the original random forest classifier.</p>
     <br><br><div class="text-center"><img class="img-fluid" src="{{ url_for('static',     filename='model_comparison_hyper.png') }}"/></div>
     <br><br><h4>Assessing the models accuracy</h4><br>
-    <p>Finally we can review 3 metrics to asses the accuracy of the trained model: accuracy, precision, and recall.</p>
+    <p>We review three metrics to asses the accuracy of the trained model: accuracy, precision, and recall.</p>
     <div class="scrollme"><figure><table class="table table-hover">
         <thead>
         <tr><th>Random Forest Classifier</th><th>&nbsp;</th></tr></thead>
         <tbody><tr><td>Accuracy</td><td>0.969</td></tr><tr><td>Precision</td><td>0.973</td></tr><tr><td>Recall</td><td>0.975</td></tr></tbody>
     </table></figure></div><br>
     <br><p>Although the model performs well on all 3 metrics, recall can be considered the metric of most importance in this particular application. Recall measures false negatives against true positives, and is of particular weight when dealing with medical issues, when it&#39;s very important to avoid false negatives.</p>
-    <br><br><h4>Deploying the trained model</h4><br>
-    <p>Now that the model is trained, all that&#39;s left is to deploy it to the web application! </p>
-    <p>If you would like to view a jupyter notebook containing all of the code necessary for processing the data and training the model as discussed above, click <a href="https://github.com/mishaaggarwal15/diabities_prediction/blob/master/diabetes_jupyter_notebook.ipynb">here</a>.</a></p>
+    <p>To view the jupyter notebook containing all of the code necessary for processing the data and training the model, click <a href="https://github.com/mishaaggarwal15/diabities_prediction/blob/master/diabetes_jupyter_notebook.ipynb">here</a>.</a></p>
 </div>
 
 {% endblock %}
