--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -25,7 +25,7 @@
     </table></figure></div><br><br>
     <p>Generation of a confusion matrix/heatmap helps visualize the relationship between different symptoms. We can see from the confusion matrix that the conditions polyuria and polydipsia are the most strongly correlated to a positive diabetes diagnosis. We can expect that they will be an important factor in any machine learning models prediction.</p>
     <br>
-    <div class="text-center"><img class="img-fluid" src="{{ url_for('static',     filename='confusion_matrix.png') }}"/></div>
+    <div class="text-center"><img class="img-fluid" src="{{ url_for('static',     filename='confusion_matrix_1.png') }}"/></div>
     <p>&nbsp;</p><br>
     <h4>Pruning Data Features</h4><br>
     <p>The next step will be to use a machine learning model called a <em>Decision tree classifier</em> to help select the most important features from the dataset. After training the decision tree classifier on the model, the following graph of feature importance is created.</p>
