--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -30,7 +30,7 @@
     <h4>Pruning Data Features</h4><br>
     <p>The next step will be to use a machine learning model called a <em>Decision tree classifier</em> to help select the most important features from the dataset. After training the decision tree classifier on the model, the following graph of feature importance is created.</p>
     <br><br>
-    <div class="text-center"><img class="img-fluid" src="{{ url_for('static',     filename='feature_bar_graph.png') }}"/></div>
+    <div class="text-center"><img class="img-fluid" src="{{ url_for('static',     filename='feature_bar_graph_1.png') }}"/></div>
     <br>
     <p>Next we will use a process called <em>recursive feature elimination with cross-validation</em> in order to automatically select the most important features to retain from out dataset, based on the assessments made earlier by the decision tree classifier. After this process is complete, our features are reduced from 17 to 11. Here is what the dataset looks like after feature pruning:</p>
     <br>
@@ -41,7 +41,7 @@
     </table></figure></div><br><br>
     <h4>Choosing a Machine Learning Model</h4><br>
     <p>Now that the data is prepared, it&#39;s time to choose a machine learning model with which to make predictions and build our application. We will fit, train, and compare the accuracy of 3 potential models: <em>K nearest neighbors classifier</em>, a <em>logistic regression classifier</em>, and a <em>random forest classifier</em>. After fitting and training these 3 models, a 5 fold cross validation will be used to compare their results. The results can be seen in the graph below.</p>
-    <br><br><div class="text-center"><img class="img-fluid" src="{{ url_for('static',     filename='model_comparison.png') }}"/></div>
+    <br><br><div class="text-center"><img class="img-fluid" src="{{ url_for('static',     filename='model_comparison_1.png') }}"/></div>
     <br><p>As can be seen from the graph, the random forest classifier performs highest in accuracy, precision, and recall. This will be our choice of model to base our web application on.</p>
     <br><h4>Tuning Hyper-parameters</h4><br>
     <p>Next we will attempt to tune the hyper-parameters of our machine learning model. We will create a grid containing a number of potential parameters for our model. Below is the code for our python grid object:</p>
