--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,7 +21,7 @@
                     <div class="card-body text-center">
                         <h4>Make a prediction</h4>
                         <p> Take the test and view results </p>
-                        <p><a class="btn btn-secondary" href="{{ url_for('diagnose') }}" role="button">View details &raquo;</a></p>
+                        <p><a class="btn btn-secondary" href="{{ url_for('diagnose') }}" role="button">Predict Results &raquo;</a></p>
                     </div>
                 </div></div>
             
@@ -33,7 +33,7 @@
                     <div class="card-body text-center">
                         <h4>Methodology</h4>
                         <p>Approach followed to create this project.</p>
-                        <p><a class="btn btn-secondary" href="{{ url_for('about') }}" role="button">View details &raquo;</a></p>
+                        <p><a class="btn btn-secondary" href="{{ url_for('about') }}" role="button">View Method &raquo;</a></p>
                     </div>
                 </div></div>
         </div>
