--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -19,12 +19,28 @@
     {% endif %}
     <title>{{title}}</title>
 </head>
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6148a613d326717cb6826c7b/1fg1shfks';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
 <body class="d-flex flex-column h-100 body">
 {% include 'navbar.html' %}
 <main role="main" class="flex-shrink-0">
     {% block content %}
     {% endblock content %}
 </main>
+
 
 <footer class="footer mt-auto py-3">
     <div class="container">
