--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -90,7 +90,7 @@
         <br>
 
         <div class="alert alert-primary shadow" id="diagnosis-result" role="alert"></div>
-
+        <p> hello there</p>
     </div>
 </div>
 
