--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -93,5 +93,15 @@
         <p> hello there</p>
     </div>
 </div>
+  <<<script type="text/javascript">>
+if (data.prediction == true) {
 
+    document.write("SAFE");
+  else(){
+
+
+      document.write("unsafe");
+
+  }
+</script>
 {% endblock %}
