--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -94,7 +94,7 @@
         <script type = "text/javascript">
          <!--
             var age = document.getElementById("diagnosis-result");;
-
+            document.write(age);
             if( age == Positive ) {
                document.write("<b>Qualifies for driving</b>");
             }
