--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,7 +6,7 @@
 <div class="container shadow rounded fadeIn p-5 my-5 bg-white" id="content">
     <h2> Machine Learning based Diabities Prediction Project</h2>
     <br><br>
-    <p>This project utilizes machine learning to provide a prediction of a patients diabetes diagnosis status based on the answers of a questionnaire regarding a number of related symptoms. The data used to train the model is obtained from the University of California Irving Machine Learning Repositories. <i>The official data resource is available <a href='https://archive.ics.uci.edu/ml/datasets/Early+stage+diabetes+risk+prediction+dataset.' target='_blank' class='url'>here</a>.</i></p>
+    <p>This project utilizes machine learning to provide a prediction of a patients diabetes diagnosis status based on the answers of a questionnaire regarding a number of related symptoms. The data used to train the model is obtained by integrating datasets from different resourses. The size of dataset was increased keeping the optimization of accuracy in check. The main data source being from the University of California Irving Machine Learning Repositories which is available <a href='https://archive.ics.uci.edu/ml/datasets/Early+stage+diabetes+risk+prediction+dataset.' target='_blank' class='url'>here</a>. Along with this the data gets dynamically accumulated with every patient, improving the preditcion accuracy.</p>
     <br><br>
     <h4>Cleaning and Transforming the Data</h4><br>
     <p>Data cleaning and transformation allows the data to be easily read by our machine learning model. A part of data before modifications is shown below:</p>
@@ -67,4 +67,3 @@
 </div>
 
 {% endblock %}
-
