--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -90,16 +90,11 @@
         <br>
 
         <div class="alert alert-primary shadow" id="diagnosis-result" role="alert"></div>
-        <p><em>Note: </em>If the Prediction diagnosis result is positive and </p>
-        <script type = "text/javascript">
-         <!--
-            var age = document.getElementById("diagnosis-result");;
-            document.write(age);
-            if( age == Positive ) {
-               document.write("<b>Qualifies for driving</b>");
-            }
-         //-->
-      </script>
+        <p><em>Recomendation: </em>If the Prediction diagnosis result is positive and the Prediction accuracy is in the following ranges:</p>
+        <ul class="list-group">
+          <li class="list-group-item">40-70 : Follow a healthy lifestyle and consult a doctor.</li>
+          <li class="list-group-item"> >70  : Consult a doctor on urgent basis </li>
+        </ul>
     </div>
 </div>
 
