--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -90,11 +90,42 @@
         <br>
 
         <div class="alert alert-primary shadow" id="diagnosis-result" role="alert"></div>
-        <p><em>Recomendation: </em>If the Prediction diagnosis result is positive and the Prediction accuracy is in the following ranges:</p>
-        <ul class="list-group">
-          <li class="list-group-item">40-70 : Follow a healthy lifestyle and consult a doctor.</li>
-          <li class="list-group-item"> >70  : Consult a doctor on urgent basis </li>
-        </ul>
+        <p><em>Note: </em></p>
+        <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Diagnosis Result</th>
+      <th scope="col">Prediction Accuracy Range</th>
+      <th scope="col">Recommendation</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row"></th>
+      <td>Positive</td>
+      <td> <40 </td>
+      <td> Follow a healthier lifestyle recommended </td>
+    </tr>
+    <tr>
+      <th scope="row"></th>
+      <td>Positive</td>
+      <td>40-70</td>
+      <td> Lifestyle changes and doctor consultation recommended </td>
+    </tr>
+    <tr>
+      <th scope="row"></th>
+      <td>Positive</td>
+      <td> >70 </td>
+      <td> Immidiate doctor consultation recommended </td>
+    </tr>
+    <tr>
+      <th scope="row"></th>
+      <td>Negative</td>
+      <td> - </td>
+      <td> Chances of being diabitic are fairly low. </td>
+    </tr>
+  </tbody>
+</table>
     </div>
 </div>
 
